feat: major updates to README and AI response handling
- Completely rewrote README.md to be more user-focused and benefit-driven
- Added AI_RESPONSE_MAX_TOKENS environment variable for configurable response length
- Updated default model to qwen3:8b and improved error handling in Ollama API
- Enhanced response cleaning for better output quality
- Added proper timeout and connection error handling
- Improved system prompt for more concise and relevant responses
- Updated environment configuration with new variables
- Removed debug logs from production code
- Added proper TypeScript interfaces for Ollama API responses
- Improved error messages for better user feedback

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 # Ollama Configuration
 OLLAMA_API_URL=http://127.0.0.1:11434
 DEFAULT_OLLAMA_MODEL=
+AI_RESPONSE_MAX_TOKENS=1200
 
 # SearXNG Configuration
 SEARXNG_API_URL=http://127.0.0.1:8888
