fix: Update start script for standalone and bump version
- Modifies the 'start' script in package.json to 'HOSTNAME=0.0.0.0 node .next/standalone/server.js'. This ensures the Next.js standalone server listens on all network interfaces (0.0.0.0) when run locally via pnpm start, making it accessible via localhost and other network IPs. This aligns local behavior with Docker and resolves potential startup message confusion.
- Bumps package version to 1.0.2.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cognito-ai-search",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "HOSTNAME=0.0.0.0 node .next/standalone/server.js",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
