--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cognito-ai-search",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H ::",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
