--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "8.6.0",
     "geist": "^1.4.2",
     "input-otp": "1.4.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.4",
@@ -57,7 +58,9 @@
     "react-resizable-panels": "^3.0.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -68,6 +71,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/katex": "^0.16.7",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
