feat: enhance light mode UI with purple/pink theme and improve PDF generation
- Update light mode color scheme from cyan/blue to purple/pink theme
- Fix site header transparency effect in light mode
- Update all icons (Globe, Diamond, Sparkles) to purple-500 with glow effects
- Apply gradient consistency to AI Response headers and Cognito AI pill
- Enhance markdown headers (h1, h2, h3) with gradient text effects
- Restore Web Results card styling with purple/pink theming
- Reduce PDF header font sizes for better content focus
- Optimize PDF spacing and positioning for improved layout
- Update release notes with comprehensive UI enhancement details

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -H ::",
     "build": "next build",
     "start": "next start -H ::",
     "lint": "next lint",
