Feat: Enhance AI prompting, response cleaning, and configuration
This commit consolidates several improvements to AI interaction and code maintainability:

- AI Prompt Engineering:
    - Refined the search query optimization prompt to be more conservative, returning the original query if no confident improvement can be made. This aims to reduce irrelevant or poor quality optimizations.
    - Updated the main AI response prompt to provide clearer instructions for Markdown list formatting.

- Response Cleaning:
    - Enhanced cleanResponse function in lib/utils.ts with more robust regex for handling Markdown list formatting.
    - Implemented more aggressive think tag removal in cleanResponse to address issues with excessive empty tags.

- Configuration & Consistency:
    - Improved Ollama timeout logic and consistency in API interactions.
    - Added clarifying comments to AI_RESPONSE_MAX_TOKENS in env.example.

- Versioning:
    - Aligned with project version 1.2.1-dev.

--- a/env.example
+++ b/env.example
@@ -1,7 +1,15 @@
 # Ollama Configuration
 OLLAMA_API_URL=http://127.0.0.1:11434
 DEFAULT_OLLAMA_MODEL=
+# Experiment with this until you get a balance between response quality and response time
+# Be aware that increasing this value may affect the response time and you may also have to increase the Ollama timeout below.
 AI_RESPONSE_MAX_TOKENS=1200
+
+# Timeout in milliseconds for requests to the Ollama API
+# Default in code is 120000 (2 minutes) if this is missing.
+# If set to an invalid value (e.g., non-numeric, 0), it defaults to 180000 (3 minutes).
+# Example: OLLAMA_TIMEOUT_MS=180000
+OLLAMA_TIMEOUT_MS=180000
 
 # SearXNG Configuration
 SEARXNG_API_URL=http://127.0.0.1:8888
@@ -10,3 +18,5 @@ SEARXNG_API_URL=http://127.0.0.1:8888
 NEXT_PUBLIC_OLLAMA_API_URL=${OLLAMA_API_URL}
 NEXT_PUBLIC_SEARXNG_API_URL=${SEARXNG_API_URL}
 NEXT_PUBLIC_DEFAULT_OLLAMA_MODEL=${DEFAULT_OLLAMA_MODEL}
+NEXT_PUBLIC_AI_RESPONSE_MAX_TOKENS=${AI_RESPONSE_MAX_TOKENS}
+NEXT_PUBLIC_OLLAMA_TIMEOUT_MS=${OLLAMA_TIMEOUT_MS}
