Add release notes and update workflow

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -3,6 +3,10 @@ name: Publish Docker Image to Docker Hub
 # This workflow will trigger when a new Release is "published" in your GitHub repository.
 on:
   workflow_dispatch: # Allows manual triggering of the workflow from the GitHub Actions tab
+  push:
+    tags:
+      - 'v*' # Triggers on version tags (e.g., v1.2.1)
+      - '*.*.*' # Triggers on semantic version tags (e.g., 1.2.1)
   release:
     types: [published] # Triggers only when you hit the "Publish release" button on GitHub
 
